# mkcpp

./: .gitignore  CMakeLists.txt  README.md  main  main.cpp  script.sh
helloworld/: helloworld  helloworld.cpp
helloworld/helloworld.dSYM/Contents/Resources/DWARF/: helloworld
helloworld/helloworld.dSYM/Contents/Resources/Relocations/aarch64/: helloworld.yml
main.dSYM/Contents/Resources/DWARF/: main
main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
